# Rust-server

./: README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
front/: package-lock.json  package.json
front/src/: App.svelte
serverSQL/: Cargo.toml
serverSQL/src/: dataBase.sql  main.rs
